<resources>
    <string name="app_name">Github User</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="search">Search</string>
    <string name="search_hint">Input Username</string>
    <string name="location">Location</string>
    <string name="repo">Repository</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="repo2"> </string>
    <string name="followers2"> </string>
    <string name="following2"> </string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="setting">Setting</string>
    <string name="button_favorite">Button Favorite</string>
    <string name="favorite">Favorite User</string>
    <string name="remider">Reminder at 09.00 AM</string>
    <string name="notification">"notification"</string>
    <string name="language">language</string>
    <string name="english">English</string>
    <string name="content_title">Hello!</string>
    <string name="content_text">Find your friend on github</string>
    <string name="change_language">English</string>
    <string name="title">Change language</string>
    <string name="add_fav">Succes add to favorite</string>
    <string name="delete_fav">Deleted from favorite</string>
</resources>